--- a/index.html
+++ b/index.html
@@ -156,14 +156,14 @@
 				<h2 class="section-text">How Meetup works</h2>
 				<div class="how-it-works">
 					<div class="work-card">
-						<a href="https://www.meetup.com/find/">
+						<a href="pages/events.html">
 							<img src="assets/svgs/greensearch.svg" alt="greensearch" />
 							<div>
 								<h3>Discover events and groups</h3>
 								<p>
 									See who’s hosting local events for all the things you love
 								</p>
-								<a href="#">Search events and groups</a>
+								<a href="pages/events.html">Search events and groups</a>
 							</div>
 						</a>
 					</div>
@@ -176,7 +176,9 @@
 									Create your own Meetup group, and draw from a community of
 									millions
 								</p>
-								<a href="#">Start a group</a>
+								<a href="https://www.meetup.com/how-to-group-start/"
+									>Start a group</a
+								>
 							</div>
 						</a>
 					</div>
@@ -202,7 +204,10 @@
 										Meetup to make connections by joining a Girls Night Out
 										Meetup group.
 									</p>
-									<a href="#">Read more</a>
+									<a
+										href="https://www.meetup.com/blog/i-used-meetup-to-make-friends-at-brunch/"
+										>Read more
+									</a>
 								</div>
 							</a>
 						</div>
@@ -218,7 +223,10 @@
 										adult. But don’t sweat it: here’s what you can do to
 										simplify the process.
 									</p>
-									<a href="#">Read more</a>
+									<a
+										href="https://www.meetup.com/blog/how-to-turn-casual-connections-into-close-friendships/"
+										>Read more</a
+									>
 								</div>
 							</a>
 						</div>
@@ -237,7 +245,10 @@
 										answer this question. Learn about the three tiers of
 										friendship and how to fulfill them.
 									</p>
-									<a href="#">Read more</a>
+									<a
+										href="https://www.meetup.com/blog/do-you-have-the-right-number-of-friends/"
+										>Read more</a
+									>
 								</div>
 							</a>
 						</div>
@@ -255,40 +266,51 @@
 			<div class="footer-links website-container">
 				<div class="column">
 					<h4>Your Account</h4>
-					<a href="#">Sign up</a>
-					<a href="#">Log in</a>
-					<a href="#">Help</a>
-					<a href="#">Become an Affiliate</a>
+					<a href="https://www.meetup.com/register/">Sign up</a>
+					<a href="https://www.meetup.com/login/">Log in</a>
+					<a href="https://www.meetup.com/en-US/help/">Help</a>
+					<a href="https://www.meetup.com/lp/affiliate-program/"
+						>Become an Affiliate</a
+					>
 				</div>
 				<div class="column">
 					<h4>Discover</h4>
-					<a href="#">Groups</a>
-					<a href="#">Calendar</a>
-					<a href="#">Topics</a>
-					<a href="#">Cities</a>
-					<a href="#">Online Events</a>
-					<a href="#">Local Guides</a>
-					<a href="#">Make Friends</a>
+					<a href="https://www.meetup.com/find/?source=GROUPS">Groups</a>
+					<a href="https://www.meetup.com/find/?source=EVENTS">Calendar</a>
+					<a href="https://www.meetup.com/topics/">Topics</a>
+					<a href="https://www.meetup.com/cities/">Cities</a>
+					<a href="https://www.meetup.com/find/online-events/">Online Events</a>
+					<a href="https://www.meetup.com/blog/category/local-guides/">Local Guides</a>
+					<a href="https://www.meetup.com/lp/friendship-and-socializing/">Make Friends</a>
 				</div>
 				<div class="column">
 					<h4>Meetup</h4>
-					<a href="#">About</a>
-					<a href="#">Blog</a>
-					<a href="#">Meetup Pro</a>
-					<a href="#">Careers</a>
-					<a href="#">Apps</a>
-					<a href="#">Podcast</a>
+					<a href="https://www.meetup.com/about/">About</a>
+					<a href="https://www.meetup.com/blog/">Blog</a>
+					<a href="https://www.meetup.com/meetup-pro/">Meetup Pro</a>
+					<a href="https://jobs.bendingspoons.com/">Careers</a>
+					<a href="https://www.meetup.com/apps/">Apps</a>
+					<a href="https://www.meetup.com/blog/category/keep-connected-podcast/">Podcast</a>
 				</div>
 			</div>
 			<div class="footer-follow-download website-container">
 				<div class="website-container">
 					<div class="social-icons">
 						<h3>Follow us</h3>
-						<a class="fb social-icon" href="#"></a>
-						<a class="twitter social-icon" href="#"></a>
-						<a class="yt social-icon" href="#"></a>
-						<a class="inst social-icon" href="#"></a>
-						<a class="tt social-icon" href="#"></a>
+						<a
+							class="fb social-icon"
+							href="https://www.facebook.com/meetup/"
+						></a>
+						<a
+							class="twitter social-icon"
+							href="https://twitter.com/Meetup/"
+						></a>
+						<a class="yt social-icon" href="https://www.youtube.com/meetup"></a>
+						<a
+							class="inst social-icon"
+							href="https://www.instagram.com/meetup/"
+						></a>
+						<a class="tt social-icon" href="https://www.tiktok.com/@meetup"></a>
 					</div>
 					<div class="download-buttons">
 						<a
@@ -303,7 +325,7 @@
 				</div>
 			</div>
 			<div class="footer-bottom">
-				<a href="#">&copy; 2024 Meetup</a>
+				<a href="https://www.meetup.com">&copy; 2024 Meetup</a>
 				<a href="https://help.meetup.com/hc/articles/360027447252"
 					>Terms of Service</a
 				>
