--- a/pages/events.html
+++ b/pages/events.html
@@ -88,60 +88,80 @@
 		<footer class="footer">
 			<div class="footer-top website-container">
 				<p>Create your own Meetup group.</p>
-				<a href="#" class="btn">Get Started</a>
+				<a href="/pages/events.html" class="btn">Get Started</a>
 			</div>
 			<hr />
 			<div class="footer-links website-container">
 				<div class="column">
 					<h4>Your Account</h4>
-					<a href="#">Sign up</a>
-					<a href="#">Log in</a>
-					<a href="#">Help</a>
-					<a href="#">Become an Affiliate</a>
+					<a href="https://www.meetup.com/register/">Sign up</a>
+					<a href="https://www.meetup.com/login/">Log in</a>
+					<a href="https://www.meetup.com/en-US/help/">Help</a>
+					<a href="https://www.meetup.com/lp/affiliate-program/"
+						>Become an Affiliate</a
+					>
 				</div>
 				<div class="column">
 					<h4>Discover</h4>
-					<a href="#">Groups</a>
-					<a href="#">Calendar</a>
-					<a href="#">Topics</a>
-					<a href="#">Cities</a>
-					<a href="#">Online Events</a>
-					<a href="#">Local Guides</a>
-					<a href="#">Make Friends</a>
+					<a href="https://www.meetup.com/find/?source=GROUPS">Groups</a>
+					<a href="https://www.meetup.com/find/?source=EVENTS">Calendar</a>
+					<a href="https://www.meetup.com/topics/">Topics</a>
+					<a href="https://www.meetup.com/cities/">Cities</a>
+					<a href="https://www.meetup.com/find/online-events/">Online Events</a>
+					<a href="https://www.meetup.com/blog/category/local-guides/">Local Guides</a>
+					<a href="https://www.meetup.com/lp/friendship-and-socializing/">Make Friends</a>
 				</div>
 				<div class="column">
 					<h4>Meetup</h4>
-					<a href="#">About</a>
-					<a href="#">Blog</a>
-					<a href="#">Meetup Pro</a>
-					<a href="#">Careers</a>
-					<a href="#">Apps</a>
-					<a href="#">Podcast</a>
+					<a href="https://www.meetup.com/about/">About</a>
+					<a href="https://www.meetup.com/blog/">Blog</a>
+					<a href="https://www.meetup.com/meetup-pro/">Meetup Pro</a>
+					<a href="https://jobs.bendingspoons.com/">Careers</a>
+					<a href="https://www.meetup.com/apps/">Apps</a>
+					<a href="https://www.meetup.com/blog/category/keep-connected-podcast/">Podcast</a>
 				</div>
 			</div>
 			<div class="footer-follow-download website-container">
 				<div class="website-container">
 					<div class="social-icons">
 						<h3>Follow us</h3>
-						<a class="fb social-icon" href="#"></a>
-						<a class="twitter social-icon" href="#"></a>
-						<a class="yt social-icon" href="#"></a>
-						<a class="inst social-icon" href="#"></a>
-						<a class="tt social-icon" href="#"></a>
+						<a
+							class="fb social-icon"
+							href="https://www.facebook.com/meetup/"
+						></a>
+						<a
+							class="twitter social-icon"
+							href="https://twitter.com/Meetup/"
+						></a>
+						<a class="yt social-icon" href="https://www.youtube.com/meetup"></a>
+						<a
+							class="inst social-icon"
+							href="https://www.instagram.com/meetup/"
+						></a>
+						<a class="tt social-icon" href="https://www.tiktok.com/@meetup"></a>
 					</div>
 					<div class="download-buttons">
-						<img src="/assets/images/googleplay.png" alt="" />
-						<img src="/assets/images/applestore.png" alt="" />
+						<a
+							href="https://play.google.com/store/apps/details?id=com.meetup&hl=en-US"
+						>
+							<img src="../assets/images/googleplay.png" alt="" />
+						</a>
+						<a href="https://apps.apple.com/us/app/meetup/id375990038">
+							<img src="../assets/images/applestore.png" alt="" />
+						</a>
 					</div>
 				</div>
 			</div>
 			<div class="footer-bottom">
-				<a href="#">&copy; 2024 Meetup</a>
-				<a href="/terms-of-service">Terms of Service</a>
-				<a href="/privacy-policy">Privacy Policy</a>
-				<a href="/do-not-sell">Do Not Sell or Share My Personal Data</a>
-				<a href="/cookie-policy">Cookie Policy</a>
-				<a href="/help">Help</a>
+				<a href="https://www.meetup.com">&copy; 2024 Meetup</a>
+				<a href="https://help.meetup.com/hc/articles/360027447252"
+					>Terms of Service</a
+				>
+				<a href="https://www.meetup.com/privacy/">Privacy Policy</a>
+				<a href="https://help.meetup.com/hc/articles/360046339551"
+					>Cookie Policy</a
+				>
+				<a href="https://www.meetup.com/help/">Help</a>
 			</div>
 		</footer>
 		<script src="/js/events.js" defer></script>
